--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -11,7 +11,7 @@
 
 :host {
   --person-details-wrapper-width: 0;
-  
+
   width: auto;
 
   fluent-text-field {
@@ -40,6 +40,9 @@
     &::part(control) {
       width: min-content;
       height: calc((var(--base-height-multiplier) + var(--density)) * var(--design-unit) * 1px);
+      word-spacing: inherit;
+      text-indent: inherit;
+      letter-spacing: inherit;
 
       &::placeholder {
         color: $placeholder-text-color;
